# FfmpegFirst

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/hz/ffmpegfirst/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: compile-ffmpeg1.sh  compile-x264.sh  jni_decode.cpp  native-lib.cpp
app/src/main/cpp/decode/: NativeDecode.cpp  NativeDecode.h
app/src/main/cpp/include/libavutil/: common.h
app/src/main/java/hz/ffmpegfirst/: Decode.java  MainActivity.java  MainActivity.kt
app/src/main/java/hz/ffmpegfirst/java/: JavaCamera.java  JavaCameraView.java
app/src/main/java/hz/ffmpegfirst/kotlin/: KotlinCamera2.kt  KotlinCameraView.kt
app/src/main/java/hz/ffmpegfirst/utils/: ShaderUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/hz/ffmpegfirst/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
